# mcp-comfyui-node-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALLATION.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
config/: agents.example.json  augment-mcp-config.json  mcp-config.template.json
docs/: API.md  CONFIGURATION.md
examples/: README.md
examples/nodes/: README_rembg_node.md  rembg_background_removal_node.py
examples/workflows/: background_removal_workflow.json
scripts/: install.sh  setup-env.sh  start-server.sh
src/: __init__.py  comfyui_mcp_server_v2.py  comfyui_node_mcp_server.py  config_manager.py  dependency_manager.py  direct_node_generator.py  enhanced_framework.py  enhanced_templates.py  execution_monitor.py  framework.py  index.ts  intelligent_analyzer.py  llm_client.py  llm_client_v2.py  mcp_client.py  performance_optimizer.py  server.ts  test-setup.ts  utils.py  web_scraper.py  web_scraper_v2.py
src/agents/: __init__.py  base_agent.py  coding_agent.py  devops_agent.py  documentation_agent.py  research_agent.py  testing_agent.py
src/config/: index.ts
src/prompts/: index.ts
src/resources/: index.ts
src/tools/: code-analyzer.ts  coding-agent.ts  devops-agent.ts  documentation-agent.ts  research-agent.ts  testing-agent.ts  web-scraper.ts  workflow-orchestrator.ts
src/types/: index.ts
src/utils/: logger.ts
tests/: test_integration.py
